added arxiv link to oceans2024 paper

--- a/index.html
+++ b/index.html
@@ -83,7 +83,7 @@
                 </script>
               </td>
               <td width="85%" valign="middle">
-                <a href="https://drive.google.com/file/d/1dFjzENC0T3QEQ-622InEwiU8Q8kV3m1G/view?usp=drive_link">
+                <a href="https://arxiv.org/abs/2410.01061">
                   <span class="papertitle">Pose Estimation of Buried Deep-Sea Objects with 3D Vision Deep Learning Models</span>
                 </a>
                 <br>
