minor typo fix, added name-pronounciation

--- a/index.html
+++ b/index.html
@@ -32,7 +32,7 @@
                   At Akasha, I worked on developing a Multiview 6DOF Pose estimation system for industrial automation. I also played a lot of Ping Pong with <a href="https://www.linkedin.com/in/agastya-kalra/">Agastya Kalra</a>.</p>     
                   
                 <p>In the past, I had the opportunity to spend two summers, in 2018 and 2020, at NVIDIA, developing and optimized CUDA kernels.
-                   Some of this work is now a part of <a href="https://github.com/NVIDIA/cutlass/blob/main/CONTRIBUTORS.md">CUTLASS</a> and <a href="https://rapids.ai/">NVIDIA RAPIDS</a> I also spent a summer at Qualcomm AI in 2023, working on memory efficient dynamic human reconstruction. Please have a look at my CV for more details on these projects.
+                   Some of this work is now a part of <a href="https://github.com/NVIDIA/cutlass/blob/main/CONTRIBUTORS.md">CUTLASS</a> and <a href="https://rapids.ai/">NVIDIA RAPIDS</a>. I also spent a summer at Qualcomm AI in 2023, working on memory efficient dynamic human reconstruction. Please have a look at my CV for more details on these projects.
                 </p>
                 </p>
                 <!-- <p>
@@ -44,6 +44,7 @@
                   <!-- <a href="data/JonBarron-bio.txt">Bio</a> &nbsp;/&nbsp; -->
                   <a href="https://scholar.google.com/citations?user=o4yJlC0AAAAJ&hl=en&oi=ao">Scholar</a> &nbsp;/&nbsp;
                   <a href="https://x.com/chinmay0301">Twitter</a> &nbsp;/&nbsp;
+                  <a href="https://www.linkedin.com/in/chinmay0301/">LinkedIn</a> &nbsp;/&nbsp;
                   <a href="https://github.com/chinmay0301ucsd">Github</a>
                 </p>
               </td>
