--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@
                 <p>Prior to joining UCSD, I was senior deep learning engineer at Akasha Imaging (acquired by <a href="https://www.intrinsic.ai/">Intrinsic.ai</a>, an Alphabet company).
                   At Akasha, I worked on developing a Multiview 6DOF Pose estimation system for industrial automation. I also played a lot of Ping Pong with <a href="https://www.linkedin.com/in/agastya-kalra/">Agastya Kalra</a>.</p>     
                   
-                <p>In the past, I had the opportunity to spend two summers, in 2018 and 2020, at NVIDIA, developing and optimized CUDA kernels.
+                <p>In the past, I had the opportunity to spend two summers, in 2018 and 2020, at NVIDIA, developing and optimizing CUDA kernels.
                    Some of this work is now a part of <a href="https://github.com/NVIDIA/cutlass/blob/main/CONTRIBUTORS.md">CUTLASS</a> and <a href="https://rapids.ai/">NVIDIA RAPIDS</a>. I also spent a summer at Qualcomm AI in 2023, working on memory efficient dynamic human reconstruction. Please have a look at my CV for more details on these projects.
                 </p>
                 </p>
