added arXiv for VolGS

--- a/index.html
+++ b/index.html
@@ -85,7 +85,7 @@
                   vol3dgs_stop()
                 </script>
               </td>
-              <td style="width: 85%; vertical-align: middle; padding: 20px;">
+              <td style=width="85%" valign="middle">
                 <a href="https://arxiv.org/abs/2410.01061">
                     <span class="papertitle">Volumetrically Consistent 3D Gaussian Rasterization</span>
                 </a>
