CVPR acceptance update <3

--- a/index.html
+++ b/index.html
@@ -92,7 +92,7 @@
                 <br>
                 <strong>Chinmay Talegaonkar</strong>, Yash Belhe, Ravi Ramamoorthi, Nicholas Antipa
                 <br>
-                <em>arXiv Preprint</em>
+                <em>CVPR 2025</em>
                 <br>
             </td>
             
