CVPR highlight update

--- a/index.html
+++ b/index.html
@@ -92,7 +92,7 @@
                 <br>
                 <strong>Chinmay Talegaonkar</strong>, Yash Belhe, Ravi Ramamoorthi, Nicholas Antipa
                 <br>
-                <em>CVPR 2025</em>
+                <em>CVPR 2025</em> <font color="red"><strong>(Highlight)</strong></font>
                 <br>
             </td>
             
