more fixes to webpage

--- a/vol3dgs/index.html
+++ b/vol3dgs/index.html
@@ -62,7 +62,9 @@
           <div class="is-size-5 publication-authors">
             <span class="author-block">University of California San Diego</span>
           </div>
-
+          <div class="is-size-5 publication-authors">
+            <span class="author-block" style="color: red;">CVPR 2025 (Highlight)</span>
+          </div>
           <div class="column has-text-centered">
             <div class="publication-links">
               <!-- PDF Link. -->
