--- a/index.html
+++ b/index.html
@@ -94,6 +94,11 @@
                 <br>
                 <em>CVPR 2025</em> <font color="red"><strong>(Highlight)</strong></font>
                 <br>
+                <a href="https://chinmay0301.github.io/vol3dgs/">Project Page</a> /
+              <!-- <!-- <a href="data/BarronMalikECCV2012.bib">bibtex</a> / -->
+              <a href="https://github.com/chinmay0301ucsd/Vol3DGS">Code Release</a> /
+              <!-- <a href="http://www.youtube.com/watch?v=NnePYprvFvA">video</a> -->
+              <!-- <p>This paper is subsumed by <a href="#SIRFS">SIRFS</a>.</p> -->
             </td>
             
             <tr onmouseout="oceans2024_stop()" onmouseover="oceans2024_start()">
