--- a/vol3dgs/index.html
+++ b/vol3dgs/index.html
@@ -69,7 +69,7 @@
             <div class="publication-links">
               <!-- PDF Link. -->
               <span class="link-block">
-                <a href="https://arxiv.org/pdf/2412.03378"
+                <a href="https://cseweb.ucsd.edu/~ravir/chinmayvolgs.pdf"
                    class="external-link button is-normal is-rounded is-dark">
                   <span class="icon">
                       <i class="fas fa-file-pdf"></i>
