added marigold defocus paper stuff

--- a/index.html
+++ b/index.html
@@ -68,6 +68,41 @@
             </tr>
           </tbody></table>
           <table style="width:100%;border:0px;border-spacing:0px;border-collapse:separate;margin-right:auto;margin-left:auto;"><tbody>
+            <tr onmouseout="marigolddefocus2025_stop()" onmouseover="marigolddefocus2025_start()">
+              <td style="padding:20px;width:25%;vertical-align:middle">
+                <div class="one">
+                  <div class="two" id='marigolddefocus_2025'><img src='images/marigold_defocus.gif' width="100%"></div>
+                  <img src='images/marigold_intro.png' width="100%">
+                </div>
+                <script type="text/javascript">
+                  function marigolddefocus2025_start() {
+                    document.getElementById('marigolddefocus_2025').style.opacity = "1";
+                  }
+
+                  function marigolddefocus2025_stop() {
+                    document.getElementById('marigolddefocus_2025').style.opacity = "0";
+                  }
+                  marigolddefocus2025_stop()
+                </script>
+              </td>
+              <td width="85%" valign="middle">
+                <a href="https://arxiv.org/pdf/2505.17358">
+                  <span class="papertitle">Repurposing Marigold for Zero-Shot Metric Depth Estimation via Defocus Blur Cues</span>
+                </a>
+                <br>
+                <strong>Chinmay Talegaonkar</strong>, Nikhil Gandudi Suresh, Zachary Novack, Yash Belhe, Priyanka Nagasamudra, Nicholas Antipa
+                <br>
+                <em>arXiv preprint</em>, 2025
+                <br>
+                
+                <!-- <a href="https://drive.google.com/file/d/1zuxhWZ3i6THvuRRBeE7dM_BJfDxO72Fq/view?usp=sharing">supplement</a> / -->
+                <!-- <a href="data/BarronMalikECCV2012.bib">bibtex</a> /
+                <a href="https://drive.google.com/file/d/12x8mhqpFsA6p0u6ZQW-ieRKF8hlQBKKe/view?usp=sharing">poster</a> / -->
+                <!-- <a href="http://www.youtube.com/watch?v=NnePYprvFvA">video</a> -->
+                <!-- <p>This paper is subsumed by <a href="#SIRFS">SIRFS</a>.</p> -->
+              </td>
+            </tr>
+
             <tr onmouseout="vol3dgs_stop()" onmouseover="vol3dgs_start()">
               <td style="padding:20px;width:25%;vertical-align:middle">
                 <div class="one">
