--- a/marigold_defocus/index.html
+++ b/marigold_defocus/index.html
@@ -307,17 +307,21 @@ Estimation via Defocus Blur Cues</title>
 
 
 <!-- TODO: Check if the below details are correct -->
-<!-- <section class="section" id="BibTeX">
+<section class="section" id="BibTeX">
   <div class="container is-max-desktop content">
     <h2 class="title">BibTeX</h2> 
-    <pre><code>@article{t2025marigold,
-  author    = {},
-  title     = {Repurposing Marigold for Zero-Shot Metric Depth Estimation via Defocus Blur Cues},
-  journal   = {},
-  year      = {},
+    <pre><code>@misc{talegaonkar2025repurposingmarigoldzeroshotmetric,
+      title={Repurposing Marigold for Zero-Shot Metric Depth Estimation via Defocus Blur Cues}, 
+      author={Chinmay Talegaonkar and Nikhil Gandudi Suresh and Zachary Novack and Yash Belhe and Priyanka Nagasamudra and Nicholas Antipa},
+      year={2025},
+      eprint={2505.17358},
+      archivePrefix={arXiv},
+      primaryClass={cs.CV},
+      url={https://arxiv.org/abs/2505.17358}, 
+
 }</code></pre>
   </div>
-</section> -->
+</section>
 
 
 <footer class="footer">
