--- a/index.html
+++ b/index.html
@@ -94,7 +94,7 @@
                 <br>
                 <em>arXiv preprint</em>, 2025
                 <br>
-                
+                <a href="https://chinmay0301.github.io/marigold_defocus/">Project Page</a> /
                 <!-- <a href="https://drive.google.com/file/d/1zuxhWZ3i6THvuRRBeE7dM_BJfDxO72Fq/view?usp=sharing">supplement</a> / -->
                 <!-- <a href="data/BarronMalikECCV2012.bib">bibtex</a> /
                 <a href="https://drive.google.com/file/d/12x8mhqpFsA6p0u6ZQW-ieRKF8hlQBKKe/view?usp=sharing">poster</a> / -->
