--- a/index.html
+++ b/index.html
@@ -70,17 +70,17 @@
           <table style="width:100%;border:0px;border-spacing:0px;border-collapse:separate;margin-right:auto;margin-left:auto;"><tbody>
             <tr onmouseout="marigolddefocus2025_stop()" onmouseover="marigolddefocus2025_start()">
               <td style="padding:20px;width:25%;vertical-align:middle">
-                <div class="one">
-                  <div class="two" id='marigolddefocus_2025'><img src='images/marigold_defocus.gif' width="100%"></div>
+                <div class="one"">
+                  <div class="two" id='marigold_image'><img src='images/marigold_defocus.gif' width="100%"></div>
                   <img src='images/marigold_intro.png' width="100%">
                 </div>
                 <script type="text/javascript">
                   function marigolddefocus2025_start() {
-                    document.getElementById('marigolddefocus_2025').style.opacity = "1";
+                    document.getElementById('marigold_image').style.opacity = "1";
                   }
 
                   function marigolddefocus2025_stop() {
-                    document.getElementById('marigolddefocus_2025').style.opacity = "0";
+                    document.getElementById('marigold_image').style.opacity = "0";
                   }
                   marigolddefocus2025_stop()
                 </script>
@@ -94,7 +94,7 @@
                 <br>
                 <em>arXiv preprint</em>, 2025
                 <br>
-                <a href="https://chinmay0301.github.io/marigold_defocus/">Project Page</a> /
+                <a href="https://chinmay0301.github.io/marigold_defocus/">Project Page</a> 
                 <!-- <a href="https://drive.google.com/file/d/1zuxhWZ3i6THvuRRBeE7dM_BJfDxO72Fq/view?usp=sharing">supplement</a> / -->
                 <!-- <a href="data/BarronMalikECCV2012.bib">bibtex</a> /
                 <a href="https://drive.google.com/file/d/12x8mhqpFsA6p0u6ZQW-ieRKF8hlQBKKe/view?usp=sharing">poster</a> / -->
