--- a/index.html
+++ b/index.html
@@ -68,6 +68,42 @@
             </tr>
           </tbody></table>
           <table style="width:100%;border:0px;border-spacing:0px;border-collapse:separate;margin-right:auto;margin-left:auto;"><tbody>
+            <tr onmouseout="rngcam_stop()" onmouseover="rngcam_start()">
+              <td style="padding:20px;width:25%;vertical-align:middle">
+                <div class="one"">
+                  <div class="two" id='rngcam_image'><img src='images/sceneout_recon.gif.gif' width="100%"></div>
+                  <img src='images/frame_0.png.png' width="100%">
+                </div>
+                <script type="text/javascript">
+                  function marigolddefocus2025_start() {
+                    document.getElementById('rngcam_image').style.opacity = "1";
+                  }
+
+                  function marigolddefocus2025_stop() {
+                    document.getElementById('rngcam_image').style.opacity = "0";
+                  }
+                  rngcam_stop()
+                </script>
+              </td>
+              <td width="85%" valign="middle">
+                <a href="">
+                  <span class="papertitle">RnGCam: High-speed video from rolling & global shutter measurements</span>
+                </a>
+                <br>
+                Kevin Tandi*, Xiang Dai*, <strong>Chinmay Talegaonkar</strong>, Gal Mishne, Nicholas Antipa
+                <br>
+                <em>ICCV</em>, 2025
+                <br>
+                <!-- <a href="https://chinmay0301.github.io/marigold_defocus/">Project Page</a>  -->
+                <!-- <a href="https://drive.google.com/file/d/1zuxhWZ3i6THvuRRBeE7dM_BJfDxO72Fq/view?usp=sharing">supplement</a> / -->
+                <!-- <a href="data/BarronMalikECCV2012.bib">bibtex</a> /
+                <a href="https://drive.google.com/file/d/12x8mhqpFsA6p0u6ZQW-ieRKF8hlQBKKe/view?usp=sharing">poster</a> / -->
+                <!-- <a href="http://www.youtube.com/watch?v=NnePYprvFvA">video</a> -->
+                <!-- <p>This paper is subsumed by <a href="#SIRFS">SIRFS</a>.</p> -->
+              </td>
+            </tr>
+            
+            
             <tr onmouseout="marigolddefocus2025_stop()" onmouseover="marigolddefocus2025_start()">
               <td style="padding:20px;width:25%;vertical-align:middle">
                 <div class="one"">
@@ -121,7 +157,7 @@
                 </script>
               </td>
               <td style=width="85%" valign="middle">
-                <a href="https://arxiv.org/abs/2412.03378">
+                <a href="https://openaccess.thecvf.com/content/CVPR2025/papers/Talegaonkar_Volumetrically_Consistent_3D_Gaussian_Rasterization_CVPR_2025_paper.pdf">
                     <span class="papertitle">Volumetrically Consistent 3D Gaussian Rasterization</span>
                 </a>
                 <br>
