--- a/index.html
+++ b/index.html
@@ -71,15 +71,15 @@
             <tr onmouseout="rngcam_stop()" onmouseover="rngcam_start()">
               <td style="padding:20px;width:25%;vertical-align:middle">
                 <div class="one"">
-                  <div class="two" id='rngcam_image'><img src='images/sceneout_recon.gif.gif' width="100%"></div>
-                  <img src='images/frame_0.png.png' width="100%">
+                  <div class="two" id='rngcam_image'><img src='images/sceneout_recon.gif' width="100%"></div>
+                  <img src='images/frame_0.png' width="100%">
                 </div>
                 <script type="text/javascript">
-                  function marigolddefocus2025_start() {
+                  function rngcam_start() {
                     document.getElementById('rngcam_image').style.opacity = "1";
                   }
 
-                  function marigolddefocus2025_stop() {
+                  function rngcam_stop() {
                     document.getElementById('rngcam_image').style.opacity = "0";
                   }
                   rngcam_stop()
