--- a/index.html
+++ b/index.html
@@ -71,8 +71,8 @@
             <tr onmouseout="rngcam_stop()" onmouseover="rngcam_start()">
               <td style="padding:20px;width:25%;vertical-align:middle">
                 <div class="one"">
-                  <div class="two" id='rngcam_image'><img src='images/sceneout_recon.gif' width="100%"></div>
-                  <img src='images/frame_0.png' width="100%">
+                  <div class="two" id='rngcam_image'><img src='images/sceneout_recon_square.gif' width="100%"></div>
+                  <img src='images/frame_0_square.png' width="100%">
                 </div>
                 <script type="text/javascript">
                   function rngcam_start() {
