marigold neurips spotlight

--- a/index.html
+++ b/index.html
@@ -128,7 +128,7 @@
                 <br>
                 <strong>Chinmay Talegaonkar</strong>, Nikhil Gandudi Suresh, Zachary Novack, Yash Belhe, Priyanka Nagasamudra, Nicholas Antipa
                 <br>
-                <em>arXiv preprint</em>, 2025
+                <em>NeurIPS 2025</em> <font color="red"><strong>(Spotlight)</strong></font>
                 <br>
                 <a href="https://chinmay0301.github.io/marigold_defocus/">Project Page</a> 
                 <!-- <a href="https://drive.google.com/file/d/1zuxhWZ3i6THvuRRBeE7dM_BJfDxO72Fq/view?usp=sharing">supplement</a> / -->
