--- a/marigold_defocus/index.html
+++ b/marigold_defocus/index.html
@@ -74,7 +74,9 @@ Estimation via Defocus Blur Cues</title>
           <div class="is-size-5 publication-authors">
             <span class="author-block"><sup></sup>University of California, San Diego</span>
           </div>
-
+          <div class="is-size-5 publication-authors">
+            <span class="author-block" style="color: red;">NeurIPS 2025 (Spotlight)</span>
+          </div>
           <!-- TODO: Fix all these links -->
           <div class="column has-text-centered">
             <div class="publication-links">
