--- a/marigold_defocus/index.html
+++ b/marigold_defocus/index.html
@@ -111,12 +111,12 @@ Estimation via Defocus Blur Cues</title>
               </span> -->
               <!-- Code Link. -->
               <span class="link-block">
-                <a href=""
+                <a href="https://github.com/chinmay0301ucsd/DiffusionCam"
                    class="external-link button is-normal is-rounded is-dark">
                   <span class="icon">
                       <i class="fab fa-github"></i>
                   </span>
-                  <span>Code (coming soon)</span>
+                  <span>Code</span>
                   </a>
               </span>
               <!-- Dataset Link. -->
