--- a/index.html
+++ b/index.html
@@ -32,7 +32,7 @@
                   At Akasha, I worked on developing a Multiview 6DOF Pose estimation system for industrial automation. I also played a lot of Ping Pong with <a href="https://www.linkedin.com/in/agastya-kalra/">Agastya Kalra</a>.</p>     
                   
                 <p><b>Internships:</b> In the past, I had the opportunity to spend two summers, in 2018 and 2020, at NVIDIA, developing and optimizing CUDA kernels.
-                   Some of this work is now a part of <a href="https://github.com/NVIDIA/cutlass/blob/main/CONTRIBUTORS.md">CUTLASS</a> and <a href="https://rapids.ai/">NVIDIA RAPIDS</a>. I was at Qualcomm AI in 2023, working on memory efficient dynamic human reconstruction that resulted in a <a href="https://patents.google.com/patent/WO2025085195A1/en">US Patent</a>. I spent the summer of 2025 at Amazon Lab126, training multi-modal LLMs for home layout estimation from 3D point clouds as inputs. Please have a look at my CV for more details on these projects. I am actively looking for research internships for Summer / Fall 2026.
+                   Some of this work is now a part of <a href="https://github.com/NVIDIA/cutlass/blob/main/CONTRIBUTORS.md">CUTLASS</a> and <a href="https://rapids.ai/">NVIDIA RAPIDS</a>. I was at Qualcomm AI in 2023, working on memory efficient dynamic human reconstruction that resulted in a <a href="https://patents.google.com/patent/WO2025085195A1/en">US Patent</a>. I spent the summer of 2025 at Amazon Lab126, training multi-modal LLMs for home layout estimation from 3D point clouds as inputs. I am currently seeking research internship opportunities starting in Summer or Fall 2026.
                 </p>
                 </p>
                 <!-- <p>
