--- a/index.html
+++ b/index.html
@@ -95,8 +95,7 @@
                 <em>NeurIPS 2025</em> <font color="red"><strong>(Spotlight)</strong></font>
                 <br>
                 <a href="https://chinmay0301.github.io/marigold_defocus/">Project Page</a> /
-
-=               <a href="https://github.com/chinmay0301ucsd/DiffusionCam">Code Release</a> /
+                <a href="https://github.com/chinmay0301ucsd/DiffusionCam">Code Release</a> /
                 <!-- <a href="https://drive.google.com/file/d/1zuxhWZ3i6THvuRRBeE7dM_BJfDxO72Fq/view?usp=sharing">supplement</a> / -->
                 <!-- <a href="data/BarronMalikECCV2012.bib">bibtex</a> /
                 <a href="https://drive.google.com/file/d/12x8mhqpFsA6p0u6ZQW-ieRKF8hlQBKKe/view?usp=sharing">poster</a> / -->
