--- a/index.html
+++ b/index.html
@@ -155,7 +155,7 @@
                 </script>
               </td>
               <td width="85%" valign="middle">
-                <a href="">
+                <a href="https://arxiv.org/abs/2509.18087">
                   <span class="papertitle">RnGCam: High-speed video from rolling & global shutter measurements</span>
                 </a>
                 <br>
