--- a/index.html
+++ b/index.html
@@ -26,8 +26,8 @@
                   </audio>
                   <button onclick="document.getElementById('name-pronunciation').play()" title="Hear name pronunciation">🔊 Pronounce</button>
                 </p>
-                <p> I am currently a 3<sup>rd</sup> year Ph.D. student at UCSD. I am advised by <a href="http://nickantipa.com/">Prof. Nicholas Antipa</a>, and also collaborate with <a href="https://yashbelhe.github.io/">Yash Belhe</a> and <a href="https://cseweb.ucsd.edu/~ravir/">Prof. Ravi Ramamoorthi.</a>
-                  I completed my MS in ECE from UCLA, advised by<a href="https://visual.ee.ucla.edu/"> Prof. Achuta Kadambi</a> and B.Tech in EE with a minor in CS from IIT Bombay.</p>
+                <p> I am currently a 4<sup>th</sup> year Ph.D. student at UCSD. I am advised by <a href="http://nickantipa.com/">Prof. Nicholas Antipa</a>, and also collaborate with <a href="https://yashbelhe.github.io/">Yash Belhe</a> and <a href="https://cseweb.ucsd.edu/~ravir/">Prof. Ravi Ramamoorthi.</a>
+                  I completed my M.S. in ECE from UCLA, advised by<a href="https://visual.ee.ucla.edu/"> Prof. Achuta Kadambi</a> and B.Tech in EE with a minor in CS from IIT Bombay.</p>
                 <p>Prior to joining UCSD, I was senior deep learning engineer at Akasha Imaging (acquired by <a href="https://www.intrinsic.ai/">Intrinsic.ai</a>, an Alphabet company).
                   At Akasha, I worked on developing a Multiview 6DOF Pose estimation system for industrial automation. I also played a lot of Ping Pong with <a href="https://www.linkedin.com/in/agastya-kalra/">Agastya Kalra</a>.</p>     
                   
