--- a/index.html
+++ b/index.html
@@ -41,8 +41,8 @@
                 <p style="text-align:center">
                   <a href="mailto:ctalegaonkar@ucsd.edu">Email</a> &nbsp;/&nbsp;
                   <!-- <a href="data/CV_Chinmay_2024.pdf">CV</a> &nbsp;/&nbsp; -->
-                  <a href="data/CT_Resume_2025.pdf">CV</a> &nbsp;/&nbsp;
-                  <a href="data/CV_Chinmay_Short.pdf">Short CV</a> &nbsp;/&nbsp;
+                  <a href="data/CT_Latest_2025.pdf">CV</a> &nbsp;/&nbsp;
+                  <a href="data/CT_Latest_2025.pdf">Short CV</a> &nbsp;/&nbsp;
                   <!-- <a href="data/JonBarron-bio.txt">Bio</a> &nbsp;/&nbsp; -->
                   <a href="https://scholar.google.com/citations?user=o4yJlC0AAAAJ&hl=en&oi=ao">Scholar</a> &nbsp;/&nbsp;
                   <a href="https://x.com/chinmay0301">Twitter</a> &nbsp;/&nbsp;
