added actual paper link

--- a/marigold_defocus/index.html
+++ b/marigold_defocus/index.html
@@ -82,7 +82,7 @@ Estimation via Defocus Blur Cues</title>
             <div class="publication-links">
               <!-- PDF Link. -->
               <span class="link-block">
-                <a href="https://arxiv.org/pdf/2505.17358"
+                <a href="https://openreview.net/pdf?id=imO353Gyrl"
                    class="external-link button is-normal is-rounded is-dark">
                   <span class="icon">
                       <i class="fas fa-file-pdf"></i>
